--- a/01 - JavaScript Drum Kit/css/style.css
+++ b/01 - JavaScript Drum Kit/css/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 .keys {
-  height: 60vh;
+  height: 100%;
   margin: 2em;
   display: flex;
   justify-content: center;
@@ -71,6 +71,7 @@ span {
 
 footer {
   height: 55px;
+  margin-top: 3em;
   padding: 1em;
   background-color: #fdc500;
 }
